fix background on safari

--- a/css/standard.css
+++ b/css/standard.css
@@ -7,6 +7,7 @@ html {
     min-height: 100%;
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/fd/LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg');
     background-attachment: fixed;
+    background-repeat: no-repeat;
     background-blend-mode: darken;
     background-size: cover;
     background-color: #111111DD;
